--- a/StockMarketSigma.ipynb
+++ b/StockMarketSigma.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2af165cb",
+   "id": "1afbe339",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
     "\n",
     "#cd\n",
     "#cd Desktop\n",
-    "#cd ConsumerPriceIndex\n",
+    "#cd StockMarketSigma\n",
     "#git pull https://github.com/JohnBroberg/StockMarketSigma.git\n",
     "\n",
     "\n",
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "694944bd",
+   "id": "bb368014",
    "metadata": {},
    "outputs": [],
    "source": []
