added mean and sigmas

--- a/StockMarketSigma.ipynb
+++ b/StockMarketSigma.ipynb
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8705b744",
+   "id": "78458cb3",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f97fd9f2",
+   "id": "8b7a5035",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "778edc4d",
+   "id": "ac8615bf",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "925480d5",
+   "id": "f7005b57",
    "metadata": {},
    "outputs": [
     {
@@ -414,8 +414,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "e5f819b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2583.1171579772736"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "close_mean = df['Close/Last'].mean()\n",
+    "close_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "da3f53bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "873.6773205087403"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "close_sd = df['Close/Last'].std()\n",
+    "close_sd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d17e2d7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3456.7944784860138"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigma1 = close_mean + close_sd\n",
+    "sigma1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "38e6474d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4330.471798994754"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigma2 = close_mean + (2 * close_sd)\n",
+    "sigma2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d1791a15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5204.149119503494"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigma3 = close_mean + (3 * close_sd)\n",
+    "sigma3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3d147352",
+   "id": "059a7b6d",
    "metadata": {},
    "outputs": [],
    "source": []
