--- a/StockMarketSigma.ipynb
+++ b/StockMarketSigma.ipynb
@@ -169,8 +169,7 @@
     "#source: https://www.nasdaq.com/market-activity/index/spx/historical\n",
     "\n",
     "#cd\n",
-    "#cd Desktop\n",
-    "#cd StockMarketSigma\n",
+    "#cd Desktop/StockMarketSigma\n",
     "#git pull https://github.com/JohnBroberg/StockMarketSigma.git\n",
     "\n",
     "\n",
