--- a/StockMarketSigma.ipynb
+++ b/StockMarketSigma.ipynb
@@ -595,6 +595,28 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "a2cb72f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8028656633842066"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z_score = (close_current - close_mean)/close_sd\n",
+    "z_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "059a7b6d",
    "metadata": {},
    "outputs": [
@@ -623,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "1fb0c41c",
    "metadata": {},
    "outputs": [
@@ -633,7 +655,7 @@
        "Text(0.5, 1.0, 'S&P 500 Daily Close/Last - 05/29/2012 to 05/27/2022')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -656,14 +678,6 @@
     "plt.legend()\n",
     "plt.title('S&P 500 Daily Close/Last - 05/29/2012 to 05/27/2022')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f6dff67",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
