okay to discard

--- a/StockMarketSigma.ipynb
+++ b/StockMarketSigma.ipynb
@@ -179,6 +179,10 @@
     "#cd git/StockMarketSigma\n",
     "#git pull https://github.com/JohnBroberg/StockMarketSigma.git\n",
     "\n",
+    "#Get trendline equation\n",
+    "#https://stackoverflow.com/questions/49460596/add-trendline-with-equation-in-2d-array\n",
+    "#https://stackoverflow.com/questions/26447191/how-to-add-trendline-in-python-matplotlib-dot-scatter-graphs\n",
+    "\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -818,6 +822,17 @@
    "source": [
     "z_score = (close_current - close_mean)/close_sd\n",
     "z_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "108ec4ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://realpython.com/linear-regression-in-python/\n",
+    "#Step 4: Get results"
    ]
   }
  ],
