updated data and refactored with new data source

--- a/StockMarketSigma.ipynb
+++ b/StockMarketSigma.ipynb
@@ -132,7 +132,7 @@
     "#\"...ordinary 2 sigma bubbles...\"\n",
     "#\"Ordinary bubbles are, to us, those that reach a 2 sigma deviation from trend. Superbubbles reach 2.5 sigma or greater.\"\n",
     "\n",
-    "#source data: https://www.nasdaq.com/market-activity/index/spx/historical\n",
+    "#source data: https://fred.stlouisfed.org/series/SP500\n",
     "\n",
     "#cd\n",
     "#cd git/StockMarketSigma\n",
